<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_gravity="center_horizontal"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editProfileText"
            android:text="@string/editProfile"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/savedOptions"
            android:text="@string/saved"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/signOutText"
            android:text="@string/signOut"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </LinearLayout>





</LinearLayout>