<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".post.AddPostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/AppSearchView"
        app:titleTextColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:layout_margin="15dp"
        app:cardCornerRadius="20dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAddPost" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"><![CDATA[








            // -> default 56dp
            android:hint="E-mail"
            android:text="admin@bio-matic.com"
            app:undelineHeight="1.5dp" // -> set underline height
            app:isClearEnabled="true" // -> toggle clear button, default true
            app:rightIcon="@drawable/ic_clear" // -> set custom right icon, default null
            app:rightButtonColor="@color/grey" // -> set right icon tint, default grey
            app:cursorDrawableColor="@color/colorAccent" // -> change cursor, selection selection
            handles color
            app:defaultHintColor="@android:color/darker_gray" // -> set inactive hint color
            app:activeHintColor="@android:color/holo_blue_dark" // -> set floating hint color
            app:defaultUnderlineColor="@android:color/darker_gray" // -> set non-focused underline
            color
            app:activeUnderlineColor="@android:color/holo_blue_dark" // -> set focused underline
            color
            app:errorColor="@android:color/holo_red_dark" /> // -> set error icon, text and
            underline color



















            ]]>

            <ImageView
                android:id="@+id/addPostImage1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="15dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toStartOf="@+id/addPostImage2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <ImageView
                android:id="@+id/addPostImage3"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="15dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/addPostImage2"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <ImageView
                android:id="@+id/addPostImage2"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="15dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toStartOf="@+id/addPostImage3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/addPostImage1"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <EditText
                android:id="@+id/addTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/required"
                android:lines="2"
                android:maxLines="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <EditText
                android:id="@+id/addExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/required"
                android:lines="5"
                android:maxLines="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addExplanation" />

            <Spinner
                android:id="@+id/add_post_spinner"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/addPicture"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/remove_2_btn"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/dialog_bg"
                android:text="@string/removePicture"
                android:textSize="10dp"
                app:layout_constraintEnd_toStartOf="@+id/remove_3_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/remove_1_btn"
                app:layout_constraintTop_toBottomOf="@+id/addPostImage2" />

            <Button
                android:id="@+id/remove_1_btn"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/dialog_bg"
                android:text="@string/removePicture"
                android:textSize="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addPostImage1" />

            <Button
                android:id="@+id/remove_3_btn"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="38dp"
                android:background="@drawable/dialog_bg"
                android:text="@string/removePicture"
                android:textSize="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addPostImage3" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:text="@string/addPostTitle"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/remove_1_btn" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/addPostExplanation"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>